// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for StandardPage component renders StandardPage with help 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Test
      </h2>
    </div>
    <div
      class="MuiBox-root css-3hnp8m"
    >
      <button
        aria-label="Click for more information"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        data-analyticsid="help-icon"
        data-mui-internal-clone-element="true"
        data-testid="help-icon"
        id="help-icon"
        tabindex="0"
        type="button"
      >
        <svg
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
          data-testid="HelpOutlineIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
          />
          <title>
            Click for more information
          </title>
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`Snapshot tests for StandardPage component renders StandardPage with title 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        standard page title
      </h2>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Snapshot tests for StandardPage component renders StandardPage without a title 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    />
  </div>
</div>
`;

exports[`Snapshot tests for full mount StandardPage component renders StandardPage with title and  help and content 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container StandardPage css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
    >
      <h2
        class="MuiTypography-root MuiTypography-body1 css-v2c8i0-MuiTypography-root"
        data-analyticsid="page-title"
        data-testid="page-title"
        id="page-title"
      >
        Test
      </h2>
    </div>
    <div
      class="MuiBox-root css-3hnp8m"
    >
      <button
        aria-label="Click for more information"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-whz9ym-MuiButtonBase-root-MuiIconButton-root"
        data-analyticsid="help-icon"
        data-mui-internal-clone-element="true"
        data-testid="help-icon"
        id="help-icon"
        tabindex="0"
        type="button"
      >
        <svg
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16iszhv-MuiSvgIcon-root"
          data-testid="HelpOutlineIcon"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
          />
          <title>
            Click for more information
          </title>
        </svg>
      </button>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    />
    <div
      class="MuiGrid-root MuiGrid-item css-1guqyqn-MuiGrid-root"
    >
      Test
    </div>
  </div>
</div>
`;
